package LEBOCQTitouan.edu.model.score;

public enum MetricType {
    ORE_EXTRACTION,
    FOOD_EXTRACTION,
    WATER_EXTRACTION
}
